Register/unregister java extensions